package com.xjtu.iron.relational.api.result;

/**
 * 数据库生成键结果。
 */
public record GeneratedKey<T>(T value) {
}
