@startuml
title Relational Access Component - L1 API / SPI / Implementation Boundary (v1 Current)

left to right direction
skinparam shadowing false
skinparam linetype polyline
skinparam classAttributeIconSize 0
skinparam nodesep 45
skinparam ranksep 55

package "relational-api\n[Level B: Storage Adapter Public API]" {
  interface RelationalTemplate {
    queryOne(statement, rowMapper)
    queryList(statement, rowMapper)
    queryScalar(statement, requiredType)
    update(statement)
    insertAndReturnKey(statement, keyType)
    batchUpdate(statement)
  }
  interface "RowMapper<T>" as RowMapper
  class SqlStatement <<record>>
  class BatchSqlStatement <<record>>
  class SqlParameter <<record>>
  class SqlExecutionOptions <<record>>
  class SqlRoute <<record>>
  class UpdateResult <<record>>
  class BatchResult <<record>>
  class "GeneratedKey<T>" as GeneratedKey <<record>>
  class RelationalAccessException
  enum RelationalFailureType
}

package "relational-spi\n[Level C: Core / Integration Extension Contracts]" {
  interface ConnectionProvider {
    acquire(context)
  }
  interface ConnectionHandle {
    connection()
    ownership()
    close()
  }
  enum ConnectionOwnership {
    OWNED
    BORROWED
  }
  interface DataSourceResolver {
    resolve(context)
  }
  interface SqlExceptionTranslator {
    translate(context, SQLException)
  }
  interface SqlExecutionListener {
    beforeExecute(context)
    afterSuccess(context, elapsed)
    afterFailure(context, elapsed, failure)
  }
  class SqlExecutionContext <<record>>
  enum SqlExecutionKind
}

package "relational-core\n[Implemented]" {
  class DefaultRelationalTemplate
  class SqlStatementValidator
  class JdbcParameterBinder
  class JdbcStatementConfigurer
  class DefaultConnectionProvider
  class DefaultConnectionHandle
  class SingleDataSourceResolver
  class StandardSqlExceptionTranslator
}

package "relational-integration-spring\n[Implemented]" {
  class SpringTransactionAwareConnectionProvider
  class SpringConnectionHandle
}

RelationalTemplate <|.. DefaultRelationalTemplate
DefaultRelationalTemplate --> SqlStatementValidator
DefaultRelationalTemplate --> JdbcParameterBinder
DefaultRelationalTemplate --> JdbcStatementConfigurer
DefaultRelationalTemplate --> ConnectionProvider
DefaultRelationalTemplate --> SqlExceptionTranslator
DefaultRelationalTemplate --> SqlExecutionListener

RelationalTemplate ..> SqlStatement
RelationalTemplate ..> BatchSqlStatement
RelationalTemplate ..> RowMapper
RelationalTemplate ..> UpdateResult
RelationalTemplate ..> BatchResult
RelationalTemplate ..> GeneratedKey
SqlStatement --> SqlParameter
SqlStatement --> SqlExecutionOptions
SqlStatement --> SqlRoute
RelationalAccessException --> RelationalFailureType

ConnectionProvider ..> SqlExecutionContext
ConnectionProvider ..> ConnectionHandle
ConnectionHandle --> ConnectionOwnership
DataSourceResolver ..> SqlExecutionContext
SqlExceptionTranslator ..> SqlExecutionContext
SqlExceptionTranslator ..> RelationalAccessException
SqlExecutionListener ..> SqlExecutionContext
SqlExecutionContext --> SqlExecutionOptions
SqlExecutionContext --> SqlRoute
SqlExecutionContext --> SqlExecutionKind

DefaultConnectionProvider ..|> ConnectionProvider
DefaultConnectionProvider --> DataSourceResolver
DefaultConnectionProvider --> DefaultConnectionHandle
DefaultConnectionHandle ..|> ConnectionHandle
SingleDataSourceResolver ..|> DataSourceResolver
StandardSqlExceptionTranslator ..|> SqlExceptionTranslator

SpringTransactionAwareConnectionProvider ..|> ConnectionProvider
SpringTransactionAwareConnectionProvider --> DataSourceResolver
SpringTransactionAwareConnectionProvider --> SpringConnectionHandle
SpringConnectionHandle ..|> ConnectionHandle

note top of RelationalTemplate
Level B:
JdbcIdempotencyStorage / JdbcOutboxStorage / JdbcTaskStorage use this API.
They do NOT reach ConnectionProvider directly.
end note

note top of ConnectionProvider
Level C:
only relational-core and integration modules normally implement/use this contract.
end note

note bottom
RelationalDialect was intentionally removed from v1.
There is no real dialect-dependent main-flow behavior yet.
end note

@enduml
